@@ -214,6 +214,23 @@ FULL INTERFACE
       change.
 
       Exceptions:
+      * RemctlError: a network or authentication error occurred
+      * RemctlNotOpenedError: no connection currently open
+
+  Remctl.noop()
+      Send a NOOP message to the server and read the reply.  This is
+      primarily used to keep a connection to a remctl server alive, such
+      as through a firewall with a session timeout, while waiting to issue
+      further commands.  Returns true on success, false on failure.
+
+      The NOOP message requires protocol version 3 support in the server,
+      so the caller should be prepared for this function to fail,
+      indicating that the connection could not be kept alive and possibly
+      that it was closed by the server.  In this case, the client will
+      need to explicitly reopen the connection with open().
+
+      Exceptions:
+      * RemctlError: a network or authentication error occurred
       * RemctlNotOpenedError: no connection currently open
 
   Remctl.close()
