@@ -6,7 +6,8 @@ remctl 3.0 (unreleased)
     client sends this message, the server replies with a NOOP message.
     This can be used to keep a persistent remctl connection alive despite
     network session timeouts.  Add new remctl_noop function to the remctl
-    library API to send the NOOP message and read the response.
+    library API and the Perl, PHP, Python, and Ruby bindings to send the
+    NOOP message and read the response.
 
     Be more explicit in the protocol about handling of continuation
     commands.  Do not allow any messages from the client after a continued
